# de1_system

./: .gitignore  README.md
de1_soc_computer/raw_binary_files/: doom_1.rbf  doom_2.rbf  proof_of_concept_1.rbf  proof_of_concept_2.rbf  snake_1.rbf  snake_2.rbf  snake_3.rbf  snake_4.rbf
de1_soc_computer/verilog/: Computer_System.qsys  Computer_System.sopcinfo  DE1_SoC_Computer.cdf  DE1_SoC_Computer.qsf  DE1_SoC_Computer.v  DE1_SoC_Computer_time_limited.cdf  GPIO_Driver_hw.tcl  GPIO_Driver_hw.tcl~  doom_driver_hw.tcl  doom_driver_hw.tcl~  snake_fpga_hw.tcl  snake_fpga_hw.tcl~
doom/: doom_consts.svh  main.sv  palette_handler.sv  patch_handler.sv  tb_main.sv  update_handler.sv
doom/simulation/: de1_soc_doom.cr.mti  de1_soc_doom.mpf  vish_stacktrace.vstf  vsim.wlf
doom/tests/: doom_patch_waveform.vcd  doom_patch_waveform.wlf  example_patch_data.txt  example_patch_data_2.txt  tb_main.sv  tb_palette.sv  tb_patch.sv  tb_update.sv  test_data.csv
doom/tools/: signal_tap_data_aggregator.py
proof_of_concept/: CMakeLists.txt  Makefile
proof_of_concept_2_keys/: CMakeLists.txt
snake_game/: CMakeLists.txt
snake_game/inc/: address_map_arm.hpp  game.hpp  snake.hpp  snake_consts.hpp
snake_game/src/: basic_game.cpp  game.cpp  peripherals.cpp  snake.cpp  snake_game.cpp
snake_game/verilog/: scores.sv  snake_consts.svh  snake_fpga.sv  snake_fpga.svh  tb_snake_fpga.sv
snake_game/verilog/simulation/: de1_system.mpf  snake_game.cr.mti  snake_game.mpf  vsim.wlf
snake_game/verilog/simulation/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
(+209 files in other folders)
